--- a/app/views/questions/index.html.erb
+++ b/app/views/questions/index.html.erb
@@ -17,8 +17,8 @@
         <td><%= question.question_text %></td>
         <td><%= question.description %></td>
         <td><%= link_to 'Show', question %></td>
-        <td><%= link_to 'Edit', edit_question_path(question) %></td>
-        <td><%= link_to 'Destroy', question, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to 'Result', result_path(question) %></td>
+        <td></td>
       </tr>
     <% end %>
   </tbody>
@@ -26,4 +26,3 @@
 
 <br>
 
-<%= link_to 'New Question', new_question_path %>
