--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -1,13 +1,13 @@
 <p id="notice"><%= notice %></p>
 
+<h1><%= @question.question_text %></h1>
 <p>
-  <strong>Question text:</strong>
-  <%= @question.question_text %>
-</p>
-
-<p>
-  <strong>Description:</strong>
   <%= @question.description %>
 </p>
+
+<%= form_with url: vote_path(@question), method: :post do |form| %>
+   <%= form.collection_radio_buttons :choice_id, @question.choices, :id, :choice_text %>
+   <%= form.submit %>
+<% end %>
 
 <%= link_to 'Back', questions_path %>
