--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,14 @@
   </head>
 
   <body>
+    <header>
+      <% if signed_in? %>
+        <%= link_to 'Sign out', destroy_user_session_path, method: :delete %>
+      <% else %>
+        <%= link_to 'Register', new_user_registration_path %>
+        <%= link_to 'Sign in', new_user_session_path %>
+      <% end %>
+    </header>
     <%= yield %>
   </body>
 </html>
